--- a/templates/member/find_password.html
+++ b/templates/member/find_password.html
@@ -156,7 +156,7 @@
           document.getElementById("error").textContent = "";
           document.getElementById(
             "result"
-          ).textContent = `✅ 비밀번호는 "${data.passwd}" 입니다.`;
+          ).textContent = `비밀번호는 "${data.passwd}" 입니다.`;
         })
         .catch(async (err) => {
           const errData = await err.json();
